# xcodeproj_top_level_repro

./: .bazelrc  Makefile  README.md  WORKSPACE
BazelSample/: BUILD.bazel
BazelSample/CocktailDB/Tests/Sources/: CocktailDBTests.swift
